# Sandbox

./: .coafile  .gitignore  README.md  README.org  test.md  test.org
C/Queue/: GNUmakefile  Queue.h  main.c
C/SOFE3200/Assignment2/Question1/: CMakeLists.txt  main.c
C/SOFE3200/Assignment2/Question2/: CMakeLists.txt  clientSocket.c  main.c  serverSocket.c
C/SOFE3450/Lab 5/: CMakeLists.txt  main.c
C/SOFE3950/Tutorial/Tutorial2/: Question1.c  Question2.c
Data Structures/: IterativeNQueen.java  IterativeNQueenAll.java  N-queen.py  NQueenIterative.java  SumOfDigits.py  Test.py  for.py  maxIndex.py  n-queen-sample.java  queen.java  sort.py  test.py
Data Structures/N-Queen/: N-queen.py  RecursiveNQueenAll.java
HugoTest/content/post/: test.org
audrino/HelloUno/: HelloUno.ino
audrino/sketch_oct01a/: HelloUno.ino
cpp/: .clang-tidy  LinkedList.cpp
cpp/2DGraphics/: CMakeLists.txt  main.cpp
cpp/AlphaShape/: CMakeLists.txt  README.org  ex_alpha_shapes_2.cpp
cpp/CGALBugRecreation/: CMakeLists.txt  main.cpp  testable.org
cpp/CMakeTutorial/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h  tutorial.cpp
cpp/CMakeTutorial/MathFunctions/: MathFunctions.cpp
cpp/CMakeTutorial/subdir/: CMakeLists.txt  subdirtest.cpp  subdirtest.hpp
cpp/ConanTest/: CMakeLists.txt  conanfile.txt  timer.cpp
cpp/ConcaveHull/: CMakeLists.txt  hull.c  hull.hpp  hullfinder.cpp  main.cpp
cpp/CreatingDLL/: CMakeLists.txt  README.org
cpp/CreatingDLL/include/: Animal.h
cpp/CreatingDLL/src/: Animal.cpp
cpp/DE/: CMakeLists.txt  DESolver.cpp  DESolver.h  main.cpp
cpp/GPS/: CMakeLists.txt  main.cpp  point.hpp  signal.hpp  solution.cpp  solution.hpp  tests.cpp
cpp/GeneratePolygon/: CMakeLists.txt  main.cpp
cpp/LinkedList/: LinkedList.cpp  LinkedList.h  LinkedList.hpp  test.cpp
cpp/PointersAreWierd/: CMakeLists.txt  README.org  main.cpp
cpp/Polygon/: CMakeLists.txt  polygon.cpp
cpp/QTlineChart/: CMakeLists.txt  conanfile.txt  linechart.pro  main.cpp
cpp/Qt3D/: CMakeLists.txt  main.cpp
cpp/QtSignals/: CMakeLists.txt  backend.cpp  backend.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
cpp/QtTest/HelloQt/: HelloQt.pro  mainwindow.cpp  mainwindow.ui
cpp/QtTest/build-HelloQt-Desktop_Qt_5_9_2_MSVC2017_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
cpp/QtTest/build-HelloQt-Desktop_Qt_5_9_2_MSVC2017_64bit-Debug/debug/: HelloQt.ilk  moc_mainwindow.cpp
cpp/QtVisualize/: CMakeLists.txt  FitnessGraph.cpp  FitnessGraph.h  QtVisualize.pro  externalClass.cpp  externalClass.hpp  graphWidget.cpp  graphWidget.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pentagonGen.cpp  textWidget.cpp  textWidget.hpp  tilingGen.cpp  tilingGen.hpp
cpp/SDLTest/: CMakeLists.txt  main.cpp
cpp/SDLTest/cmake/: HunterGate.cmake
cpp/Software Quality/Assignment 2/: .gitignore  CMakeLists.txt  README.org
cpp/Software Quality/Assignment 2/src/: helper.cpp  helper.hpp  main.cpp
cpp/Software Quality/Assignment 2/tests/: unit_tests.cpp
cpp/Sorting/: CMakeLists.txt  Point.hpp  main.cpp
cpp/Triangulation/: CMakeLists.txt  triangulation_prog1.cpp
cpp/UsingDLL/: CMakeLists.txt  README.org
cpp/UsingDLL/libs/: animallib.lib
cpp/UsingDLL/src/: uselib.cpp
cpp/clitest/: CMakeLists.txt  main.cpp  rang.hpp
cpp/fileIO/: CMakeLists.txt  FooBar.csv  main.cpp
cpp/gnuplot/: CMakeLists.txt  main.cpp
cpp/imgui/: CMakeLists.txt  imgui.cpp  imgui_readme.org  main.cpp
cpp/imgui/imgui/: CMakeLists.txt
cpp/imgui/lib/: glfw3.lib
cpp/listManipulation/: CMakeLists.txt  Makefile  main  main.cpp
dart/sandbox/: .gitignore  pubspec.yaml
dart/sandbox/android/: build.gradle
dart/sandbox/android/app/: build.gradle
dart/sandbox/lib/: home.dart  main.dart
emacs-lisp/: hello_maths.el  rainbow-mode.el
golang/HelloWorld/: HelloWorld  hello.go
golang/HugoTest/: config.toml
golang/HugoTest/content/post/: test.org
java/: IterativeNQueen.java  IterativeNQueenAll.java  Parallel.java
js/HelloNPM/: README.org  index.html  package.json
js/HelloWorld/: index.html  index.js
matlab/LoadLibs/: CMakeLists.txt  animallib.lib  module.def  testing.m
matlab/LoadLibs/include/: Animal.h  animallib_Export.h
matlab/LoadLibs/src/: Animal.cpp
ox-latex/: reference_in_org.org  reference_in_org.tex  test.org  test.tex
perl/: cmd_arg.pl  fileio.pl  hello.pl  multi_array.pl  regex_test.pl
python/: Atoi.py  Youtube_thumbnail_scrapper.py  cashier.py  defang.py  example.csv  facnySequence.py  firstMissingPositive.py  numberOfCombinations.py  plot_line_read_list.py  plot_lines.py  regex_test.py  ruff.toml  sort.py
python/Caffeine/: .gitignore  README.org  coffee.py
python/CheckApps/: README.org  bot.py  check_apps.py
python/Flask_example/: README.org
python/Peel Region Waste Collection Cal/: .gitignore  README.org  main.py  my.ics  raw_data.txt
python/Requests/: README.org  check_apps.py  main.py
python/YoutubeMusicManager/: .gitignore  README.org  delete.py  main.py
python/cfg_parsing/: config.cfg  parse.cfg.py
python/pexpect_test/: README.org  main.py
shell/: hello.sh
shell/Assignment1/: get_occurances.sh
shell/SOFE3200/Assignment1/: Documentation.org  question1.sh  question2.sh  question3.sh
src/: SumOfDigits.py  maxIndex.py  sort.py  sort_base.py  traverse.py
src/BinaryTreeTraverse/: traverse.py
src/cpp/: LinkedList.cpp  test.cpp
src/nQueen/: RecursiveNQueen.java
web/: dbo.Table.sql
web/FlaskExample/: web.py
web/FlaskExample/db/: helper.py
web/FlaskExample/views/: average_fav_tweets.html  avg_retweets.html  china_tweets.html  count_tweets.html  display_users.html  full_join_tables.html  highest_tweet_count.html  index.html  join_tables.html  latest_tweet.html  tables.html  union_result.html
web/HelloNPM/: index.js  package-lock.json
web/react-calc/: .prettierrc.json  README.md  package-lock.json  package.json
web/react-calc/src/: App.css  App.js  App.scss  index.scss
web/react-redux-todo/: .eslintcache  README.md  package-lock.json  package.json
web/react-redux-todo/src/: TodoApp.js  index.css  index.js
(+14 files in other folders)
