CMAKE_MINIMUM_REQUIRED (VERSION 3.5)
PROJECT (CGALBugRecreation)

SET (CMAKE_CXX_STANDARD 11)

# CGAL config
FIND_PACKAGE(CGAL REQUIRED)
INCLUDE( ${CGAL_USE_FILE} )
INCLUDE( CGAL_CreateSingleSourceCGALProgram )
INCLUDE_DIRECTORIES ("${CGAL_ROOT}/include/CGAL")
INCLUDE_DIRECTORIES (BEFORE "../../include")

ADD_EXECUTABLE(main main.cpp)
