CMAKE_MINIMUM_REQUIRED (VERSION 3.5)

INCLUDE("cmake/HunterGate.cmake")
HunterGate(
  URL "https://github.com/ruslo/hunter/archive/v0.19.110.tar.gz"
  SHA1 "6880a0ef5c81c4236f384ad07cb1c55383cbce43"
  )

PROJECT (SDLandHUNTERTest)

HUNTER_ADD_PACKAGE(SDL2)
FIND_PACKAGE(SDL2 CONFIG REQUIRED)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIR})

ADD_EXECUTABLE(main main.cpp)
TARGET_LINK_LIBRARIES(main SDL2::SDL2)
