CMAKE_MINIMUM_REQUIRED (VERSION 3.1)
PROJECT (imguitest)

SET(CMAKE_CXX_STANDARD 11)

# The version number.
SET (imguitest_VERSION_MAJOR 0)
SET (imguitest_VERSION_MINOR 5)

ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/imgui")

ADD_EXECUTABLE(main main.cpp)
TARGET_LINK_LIBRARIES (main ${SOURCE} ${HEADERS} glew32 glew32s SDL2 SDL2main SDL2test OpenGL32)

TARGET_INCLUDE_DIRECTORIES (main SYSTEM PUBLIC ${PROJECT_SOURCE_DIR}/include)
LINK_DIRECTORIES (${PROJECT_SOURCE_DIR}/libs)
