CMAKE_MINIMUM_REQUIRED (VERSION 3.1)
PROJECT (imguitest)

SET(CMAKE_CXX_STANDARD 11)

# The version number.
SET (imguitest_VERSION_MAJOR 0)
SET (imguitest_VERSION_MINOR 5)

# Include libs from imgui
ADD_LIBRARY(imgui "")
INCLUDE(imgui/CMakeLists.txt)

# GLEW config
SET(CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/external/glew-2.1.0")
SET(CMAKE_LIBRARY_PATH "${CMAKE_SOURCE_DIR}/external/glew-2.1.0/lib/Release/x64/")
FIND_PACKAGE(GLEW REQUIRED)
MESSAGE(STATUS "-- GLEW library was found")
ADD_DEFINITIONS(${GLEW_DEFINITIONS})


# SDL config
# https://trenki2.github.io/blog/2017/06/02/using-sdl2-with-cmake/
FIND_PACKAGE(SDL2 REQUIRED)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
MESSAGE(STATUS "-- SDL2 library was found")

ADD_EXECUTABLE(main main.cpp)
TARGET_LINK_LIBRARIES(main imgui ${GLEW_LIBRARIES} ${SDL2_LIBRARIES} OpenGL32)

TARGET_INCLUDE_DIRECTORIES(main SYSTEM PUBLIC
  ${PROJECT_SOURCE_DIR}/include
  ${SDL2_INCLUDE_DIR}
  ${GLEW_INCLUDE_DIRS}
  )
